# carapace_lb

./: .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
certs/: README.md
src/: config.rs  docker.rs  lib.rs  load_balancer.rs  main.rs  routes.rs  server.rs  service_discovery.rs
src/tests/: config_tests.rs  docker_tests.rs  mod.rs  routes_tests.rs  server_tests.rs
tests/: config-containerized.toml  config-non-containerized.toml  docker-compose-lb.yml  docker-compose.yml  pingora-poc.bak  routes_test.json  upstreams.txt
tests/app1/: default.conf  index.html
tests/app2/: default.conf  index.html
tests/app3/: default.conf  index.html
