[package]
name = "carapace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
pingora = { version = "0.1", features = [ "lb" ] }
serde = { version="1.0.203", features = ["derive"] }
toml = "0.8.14"
bollard = { version= "0.16.1", features = ["default"] }
tokio = { version = "1", features = ["macros"] }
http = "1.1.0"
serde_json = "1.0.117"

[profile.release]
lto = true
opt-level = 1
