[package]
name = "carapace"
version = "0.1.0"
edition = "2021"
description = "Carapace is a path-based load balancer that leverages the Pingora Framework by Cloudflare to manage and route traffic efficiently."
repository = "https://github.com/j-p-d-e-v/carapace"
license = "Apache-2.0"
authors = ["JP Mateo <jpmateo022@gmail.com>"]
categories = ["asynchronous","network-programming","web-programming","web-programming::http-server"]
keywords = ["pingora", "personal-project","warp","load-balancer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
pingora = { version = "0.1", features = [ "lb" ] }
serde = { version="1.0.203", features = ["derive"] }
toml = "0.8.14"
bollard = { version= "0.16.1", features = ["default"] }
tokio = { version = "1", features = ["macros"] }
http = "1.1.0"
serde_json = "1.0.117"

[profile.release]
lto = true
opt-level = 1
